--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'io.franzbecker.gradle-lombok' version '1.14'
 }
 
 apply plugin: 'groovy'
@@ -14,8 +13,8 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
 }
-
 dependencies {
+    compile "org.projectlombok:lombok:1.18.4"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.2-groovy-2.5'
 }
