--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
     mavenCentral()
 }
 dependencies {
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.25.2'
     compile "org.projectlombok:lombok:1.18.4"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.2-groovy-2.5'
