--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 }
 dependencies {
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.25.2'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile "org.projectlombok:lombok:1.18.4"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.2-groovy-2.5'
