--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.25.2'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile "org.projectlombok:lombok:1.18.4"
+    compile "org.dizitart:nitrite:3.2.0"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.2-groovy-2.5'
 }
